tests/expectations/parser/program/tilde_eof.out
Error [EPAR0370050]: Could not lex the following content: `~`.

    --> test:5:2
     |
   5 | }~
     |  ^
